- Projects2: Added finance permissions tab to the settings dialog so that the users who can see the financial data of projects can be managed.
- Address Book Advanced Search: now possible to search by ID.

13-11-2014 6.1.3
- New licenses failed
- Updated German

12-11-2014 6.1.2
- Set max_execution_time to 0 in download action

11-11-2014 6.1.1
- Initial 6.1 release
- Changed back to the old licensing system because the new system was confusing people.

11-11-2014 6.0.35
- Filesearch: Fixed namespace issue in the filesearch cronjob
- Address Book: Fix for IE11 color picker bug in Contact Dialog.
- File Search: Fixed searching for file types.
- Email: Fixed problem with enable/disable templates button when the user has no permissions to use the addressbook module
- Billing: When duplicationg orders from one book to another, check if one of the two books is a purchase order book. When one of the 2 is a purchase order book then swap the unit_price with the unit_cost parameter for every order item.
- Billing: Added contextmenu to order grid that adds the functionality to change the order status of the selected orders.
- Calendar: When importing an ICS file with an appointment that has a recurrence pattern 'last X of month', an error message is given but the import continues.
- Documenttemplates - Fixed Exception that was throwed when no customfieldrecord could be found
- CalDAV will except slashed in imported events

06-11-2014 6.0.34
- Fixed broken email viewer in files module
- Fixed ODF generation in billing
- Trim leading backslashes in autoloader
- Script compression sent wrong headers which broke script loading in some rare cases
- Email: added new config property to the emailcomposer to disable the template button (config.disableTemplates)
- Tasks: Added pagination to the category select combobox
- Fixed AbstractController::getRoute() function with namespaces.
- Accept YYYYMMDD format when importing vCard with birthdays